# Computational-Linear-Algebra-

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
10-Least_Squares/: lsq_p1_driver.py  lsq_quick.py
10-Least_Squares/lin_alg/: lin_alg.py
12_Poly-Fitting/: poly-fitting-animation.py  poly-fitting.py  std-rust_test_100000.0.csv
14_Exponential-Fitting/: example1.py
15_Gram-Schmidt/: gram-schmidt.py
1_Introduction/: ex1.m  ex1.py  ex2.m  ex2.py
2_Triangular_Matrices/: triangle_1.m  triangle_1.py
4_Structured_GE/: struct_ge.m  struct_ge.py
5_LU_Decomposition/: lu_decomp.m  lu_decomp.py  quick_lu_decomp.py
6_LDV/: ldv.m  ldv.py
6_LDV/lin_alg/: lin_alg.py
7_Cholesky/: chol.py  chol_quick.m
8_LDLT/: ldlt_driver.py
9_Non-Square/: ldv_driver.py  lu_driver.py
9_Non-Square/lin_alg/: lin_alg.py
Unit1/1_Introduction/: ex1.py  ex2.m
Unit1/2_Triangular_Matrices/: triangle_1.m  triangle_1.py
Unit1/3_Triangle_Algorithm/: tri_algo.m  tri_algo.py
Unit1/5_LU_Decomposition/: lu_decomp.py
Unit1/6_LDV/: ldv.m
Unit1/7_Cholesky/: chol_quick.py
Unit1/8_LDLT/lin_alg/: lin_alg.py
Unit2/11_Line-Fitting/: line-fitting.py
Unit2/9_Non-Square/: ldv_driver.py  solve_driver.py
Unit3/Computing-Eigenvalues/: computing-eigenvalues.ipynb
Unit3/Gram-Schmidt/: gram-schmidt.m
Unit3/Orthonormal-Matrices/: benchmarking.py  orthonormal-matrices.ipynb
Unit3/QR-Decomposition/: QR-decomposition.ipynb
Unit3/SVD/: svd.ipynb
Unit4/data-image-compression/: data-image-compression.ipynb
Unit4/determinants/: bareiss-frames.py  determinants.ipynb
(+3 files in other folders)
